src/dios-egraphs/Diospyros/err2.txt
opt: build/diospyros.ll:192:38: error: expected type
  %11 = phi i64 [ 0, %.lr.ph11 ], [ <badref>, %32 ]
                                     ^
